--- a/INEQ/INEQ/Web.config
+++ b/INEQ/INEQ/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="UserDbContext" connectionString="Data Source=SAMSUNG;Initial Catalog=dbINEQ;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="EquipmentContext" connectionString="Data Source=(local);Initial Catalog=dbIneq;Integrated Security=true"
       providerName="System.Data.SqlClient" />
     <add name="dbINEQEntities" connectionString="metadata=res://*/Models.dbIneqModel.csdl|res://*/Models.dbIneqModel.ssdl|res://*/Models.dbIneqModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=dbINEQ;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
